@@ -75,14 +75,14 @@ a*b	a/b	a%b		multiplication, division and modulo
 ~a	+a	-a		bitwise not, no effect and negation
 (a)				parenthesis
 
-Literals in expressions may be written as:
-14	decimal number
-014	octal number
-0x14	hexadecimal number
-%10	binary number
-@c14	number 14, where the base of the number is 13 (so c + 1 == 10)
-'s'	ASCII code of s
-$	address of first byte of current command
+Literals in expressions may be written as: (case does not matter)
+14, 14d		decimal number
+016, 16o, 16q	octal number
+0xE, 0Eh	hexadecimal number (first character must be 0-9)
+%1110, 1110b	binary number
+@c11		base 13 number (specified by 'c' so c+1 == 10)
+'s'		ASCII code of 's'
+$		address of first byte of current command
 
 In all expressions, labels may be used.  However, there are some expressions
 where the value must be computable at once, and therefore only previously
